# brewery-pipeline

./: Brewery_Insight.ipynb
data-pipeline/: .gitignore  README.md  pyproject.toml
data-pipeline/data-pipeline/data-pipeline/data-pipeline/: README.md
data-pipeline/src/: cli.py  enricher.py  ingester.py  utils.py
data-pipeline/src/data-pipeline/src/: api_tools.py  enricher.py
data-pipeline/src/data-pipeline/tests/: test_api_tools.py
duckdb-etl/: README.md  requirements.txt
