[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brewery-pipeline"
version = "1.0.0"
description = "Brewery Data Ingestion & Enrichment Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark==3.5.2",
    "click>=8.0",
    "requests==2.32.4",
    "pytest>=7.0.0",
]

[project.scripts]
breweries = "src.cli:main"
